--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -3,6 +3,6 @@
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <a href="https://github.com/cytoflow/cytoflow/releases/download/{{ site.version }}/cytoflow-gui-{{ site.version }}-win-amd64.exe" class="btn">Download v{{ site.version }} for Windows (64 bit)</a>
   <a href="https://github.com/cytoflow/cytoflow/releases/download/{{ site.version }}/cytoflow-gui-{{ site.version }}.macos.zip" class="btn">Download v{{ site.version }} for Mac (10.15+)</a>
-  <a href="https://github.com/cytoflow/cytoflow/releases/download/{{ site.version }}/cytoflow-gui-{{ site.version }}.linux_x86-64.tar.gz" class="btn">Download v{{ site.version }} for Linux (64 bit)</a>
+  <a href="https://github.com/cytoflow/cytoflow/releases/download/{{ site.version }}/cytoflow-gui-{{ site.version }}.linux_x86-64.tar.bz2" class="btn">Download v{{ site.version }} for Linux (64 bit)</a>
   <a href="http://cytoflow.readthedocs.io/" class="btn">Developer Documentation</a>
 </section>
